--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "express": "^4.17.1",
     "pg": "^8.16.3",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
